tests/NormalTests/paczka1/fuzzy1/47812428.err
Error in line 2: Ja4 A734 3,9
Error in line 3: zC3HBaN A734 90,0
Error in line 14: atdngMos S789 49,9
Error in line 20: lOsQD7 A100 33,0
Error in line 31: lOsQD7 A402 7,7
Error in line 39: A402 A734 55,5
